trivial changes. Or more accurately, I don't remember what I did.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ qt_add_executable(appBLT-GUI-Maker
     GNCThread.hpp GNCThread.cpp
     Controller.hpp Controller.cpp
     CommandState.hpp
+    Node.hpp
 
     QMLtestclass.hpp QMLtestclass.cpp
 )
