--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,16 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(BLT-GUI-Maker VERSION 0.1 LANGUAGES CXX)
+project(BLT-Theseus-GUI VERSION 0.1 LANGUAGES CXX)
 
-set(CMAKE_AUTOMOC ON)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(Qt6 6.2 COMPONENTS Quick SerialBus REQUIRED)
+find_package(Qt6 6.4 REQUIRED COMPONENTS Quick SerialBus)
 
-qt_add_executable(appBLT-GUI-Maker
+qt_standard_project_setup()
+
+qt_add_executable(appBLT-Theseus-GUI
     main.cpp
+    DirHelper.hpp DirHelper.cpp
     FrameHandler.hpp FrameHandler.cpp
     Sensor.hpp Sensor.cpp SensorObjectDefinitions.hpp
     HPSensor.hpp HPSensor.cpp HPSensorObjectDefinitions.hpp
@@ -19,29 +21,16 @@ qt_add_executable(appBLT-GUI-Maker
     GNCThread.hpp GNCThread.cpp
     EngineController.hpp EngineController.cpp EngineControllerObjectDefinitions.hpp
     TankPressController.hpp TankPressController.cpp TankPressControllerObjectDefinitions.hpp
-    CommandState.hpp
     Node.hpp
-    QMLtestclass.hpp QMLtestclass.cpp
 )
 
-qt_add_qml_module(appBLT-GUI-Maker
-    URI BLT-GUI-Maker
+qt_add_qml_module(appBLT-Theseus-GUI
+    URI BLT-Theseus-GUI
     VERSION 1.0
-    QML_FILES main.qml 
-    SOURCES FrameHandler.hpp FrameHandler.cpp
-    Sensor.hpp Sensor.cpp SensorObjectDefinitions.hpp
-    Valve.hpp Valve.cpp ValveObjectDefinitions.hpp
-    GNCThread.hpp GNCThread.cpp
-    Controller.hpp Controller.cpp
-
-    CommandState.hpp
-
-
-    QMLtestclass.hpp QMLtestclass.cpp
-
+    QML_FILES Main.qml Graph.qml HPSensor.qml SensorQML.qml ValveQML.qml
 )
 
-set_target_properties(appBLT-GUI-Maker PROPERTIES
+set_target_properties(appBLT-Theseus-GUI PROPERTIES
     MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
     MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
@@ -49,9 +38,10 @@ set_target_properties(appBLT-GUI-Maker PROPERTIES
     WIN32_EXECUTABLE TRUE
 )
 
-target_link_libraries(appBLT-GUI-Maker
-    PRIVATE Qt6::Quick Qt6::SerialBus)
+target_link_libraries(appBLT-Theseus-GUI
+    PRIVATE Qt6::Quick Qt6::SerialBus
+)
 
-install(TARGETS appBLT-GUI-Maker
+install(TARGETS appBLT-Theseus-GUI
     BUNDLE DESTINATION .
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
